Navigation updates for libanswers, libcal, and libguides

--- a/libanswers/custom-header.html
+++ b/libanswers/custom-header.html
@@ -28,6 +28,7 @@
             <li><a href="https://libraries.mit.edu/search">Search tools home</a></li>
             <li><a href="https://libraries.mit.edu/search-collections">Search Our Collections <span class="about">Books, articles, and more</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
+            <li><a href="https://libguides.mit.edu/az.php">Databases A-Z<span class="about">JSTOR, PubMed, Web of Science, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/search-reserves">Course reserves</a></li>
           </ul>
         </div>
@@ -67,9 +68,9 @@
             <li><a href="https://libraries.mit.edu/locations">Map of locations</a></li>
             <li><a href="https://libraries.mit.edu/study">Study spaces</a></li>
             <li><a href="https://libraries.mit.edu/disabilities">Persons with disabilities</a></li>
-            <li><a href="https://libraries.mit.edu/copying">Scan, copy, print</a></li>
+            <li><a href="https://libraries.mit.edu/copying">Scan &amp; print</a></li>
             <li><a href="https://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a></li>
-            <li><a href="https://libraries.mit.edu/visitors">Non-MIT visitors</a></li>
+            <li><a href="https://libraries.mit.edu/visitors">Visitors</a></li>
             <li><a href="https://libraries.mit.edu/use-policies">Library use policy</a></li>
           </ul>
         </div>
@@ -95,7 +96,7 @@
         <div class="col-2 flex-item">
           <h3 class="heading-col">More information</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/reserves">Course reserves &amp; TIP</a></li>
+            <li><a href="https://libraries.mit.edu/reserves">Course reserves</a></li>
             <li><a href="https://libraries.mit.edu/borrow-direct">Borrow Direct <span class="about">Request items from Harvard, Yale, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/otherlibraries">Visit non-MIT libraries <span class="about">Harvard, Borrow Direct, etc.</span></a></li>
           </ul>
@@ -123,7 +124,7 @@
             <li><a href="https://libraries.mit.edu/references">Citation &amp; writing tools <span class="about">Mendeley, Zotero, &amp; Overleaf</span></a></li>
             <li><a href="https://libraries.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/data-services">Data services <span class="about">GIS, data management, statistical support</span></a></li>
-            <li><a href="https://libraries.mit.edu/scholarly">Scholarly publishing <span class="about">Open access &amp; copyright</span></a></li>
+            <li><a href="https://libraries.mit.edu/scholarly">Scholarly communications <span class="about">Open access, copyright, &amp; publishing</span></a></li>
             <li><a href="https://libraries.mit.edu/apis">APIs for scholarly resources</a></li>
           </ul>
         </div>
