--- a/libstaff/custom-footer.html
+++ b/libstaff/custom-footer.html
@@ -1,1 +1,6 @@
-<p align="center"><br /><a href="http://libguides.mit.edu/staff">Staff Web</a>  | <a href="http://libraries.mit.edu">MIT Libraries</a> | <a href="http://web.mit.edu">MIT</a><br /><br />Powered by <a href="http://www.springshare.com">Springshare.</a> Text licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons,</a> unless otherwise noted. All other media all rights reserved unless otherwise noted.<br /><br /></p>
+<div class="footer-staffguide container">
+<p>
+<a href="https://libguides.mit.edu/staff">Staff Web</a>  | <a href="https://libraries.mit.edu">MIT Libraries</a> | <a href="https://web.mit.edu">MIT</a>
+</p>
+<p>Powered by <a href="https://www.springshare.com">Springshare.</a> Text licensed under <a href="https://creativecommons.org/licenses/by-sa/3.0/">Creative Commons,</a> unless otherwise noted. All other media all rights reserved unless otherwise noted.</p>
+</div>
