--- a/libstaff/custom-head.html
+++ b/libstaff/custom-head.html
@@ -1,5 +1,3 @@
-<link rel="shortcut icon" href="http://libraries.mit.edu/favicon.ico" type="image/vnd.microsoft.icon" />
-
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,600italic,700,700italic">
 
 <style type="text/css">
@@ -17,6 +15,10 @@ body {
 
 table, th, td {
     padding: 5px;
+}
+
+.header-staffguide {
+    background-color: #477A5D;
 }
 
 #s-lib-bc .breadcrumb, 
