--- a/libstaff/custom-header.html
+++ b/libstaff/custom-header.html
@@ -1,1 +1,6 @@
-<link rel="shortcut icon" href="http://libraries.mit.edu/favicon.ico" type="image/vnd.microsoft.icon" /><a href="http://libguides.mit.edu/staff"><img src="https://s3.amazonaws.com/libapps/accounts/351/images/stafflogo-green.png" alt="MIT Libraries Staff Web" /></a>
+<link rel="shortcut icon" href="https://libraries.mit.edu/favicon.ico" type="image/vnd.microsoft.icon" />
+<div class="header-staffguide container">
+<a class="link-home" href="http://libguides.mit.edu/staff">
+<img src="https://s3.amazonaws.com/libapps/accounts/351/images/stafflogo-green.png" alt="MIT Libraries Staff Web"/>
+</a>
+</div>
