--- a/libanswers/custom-footer.html
+++ b/libanswers/custom-footer.html
@@ -40,8 +40,8 @@
                         <nav class="sitemap-libraries-abbrev" aria-label="MIT Libraries site menu">
                             <h2 class="sr">MIT Libraries navigation</h2>
                             <a class="item" href="https://libraries.mit.edu/search">Search</a>
-                            <a class="item" href="https://libraries.mit.edu/hours">Hours &amp; locations</a>
-                            <a class="item" href="https://libraries.mit.edu/borrow">Borrow &amp; request</a>
+                            <a class="item" href="https://libraries.mit.edu/hours">Hours & locations</a>
+                            <a class="item" href="https://libraries.mit.edu/borrow">Borrow & request</a>
                             <a class="item" href="https://libraries.mit.edu/research-support">Research support</a>
                             <a class="item" href="https://libraries.mit.edu/about">About us</a>
                         </nav>
