--- a/libanswers/custom-header.html
+++ b/libanswers/custom-header.html
@@ -27,7 +27,7 @@
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/search">Search tools home</a></li>
             <li><a href="https://libraries.mit.edu/search-collections">Search Our Collections <span class="about">Books, articles, and more</span></a></li>
-            <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books &amp; more worldwide</span></a></li>
+            <li><a href="https://libraries.mit.edu/worldcat">WorldCat<span class="about">Books & more worldwide</span></a></li>
             <li><a href="https://libguides.mit.edu/az.php">Databases A-Z<span class="about">JSTOR, PubMed, Web of Science, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/search-reserves">Course reserves</a></li>
           </ul>
@@ -45,8 +45,8 @@
     </li><!-- end div.links-primary -->
     <li class="link-primary flex-end">
       <h2 class="main-nav-header">
-        <a id="main-nav-hoursmenu-title" href="https://libraries.mit.edu/hours" class="no-underline main-nav-link">Hours &amp; locations</a>
-        <button class="menu-control sr">Hours &amp; locations menu</button>
+        <a id="main-nav-hoursmenu-title" href="https://libraries.mit.edu/hours" class="no-underline main-nav-link">Hours & locations</a>
+        <button class="menu-control sr">Hours & locations menu</button>
       </h2>
       <div aria-labelledby="main-nav-hoursmenu-title" id="main-nav-hoursmenu" class="links-sub flex-container group">
         <div class="col-1 flex-item">
@@ -68,8 +68,8 @@
             <li><a href="https://libraries.mit.edu/locations">Map of locations</a></li>
             <li><a href="https://libraries.mit.edu/study">Study spaces</a></li>
             <li><a href="https://libraries.mit.edu/disabilities">Persons with disabilities</a></li>
-            <li><a href="https://libraries.mit.edu/copying">Scan &amp; print</a></li>
-            <li><a href="https://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a></li>
+            <li><a href="https://libraries.mit.edu/copying">Scan & print</a></li>
+            <li><a href="https://libraries.mit.edu/exhibits">Exhibits & galleries</a></li>
             <li><a href="https://libraries.mit.edu/visitors">Visitors</a></li>
             <li><a href="https://libraries.mit.edu/use-policies">Library use policy</a></li>
           </ul>
@@ -78,14 +78,14 @@
     </li><!-- end div.links-primary -->
     <li class="link-primary flex-end">
       <h2 class="main-nav-header">
-        <a id="main-nav-borrowmenu-title" href="https://libraries.mit.edu/borrow" class="no-underline main-nav-link">Borrow &amp; request</a>
-        <button class="menu-control sr">Borrow &amp; request menu</button>
+        <a id="main-nav-borrowmenu-title" href="https://libraries.mit.edu/borrow" class="no-underline main-nav-link">Borrow & request</a>
+        <button class="menu-control sr">Borrow & request menu</button>
       </h2>
       <div aria-labelledby="main-nav-borrowmenu-title" id="main-nav-borrowmenu" class="links-sub flex-container group">
         <div class="col-1 flex-item">
           <h3 class="heading-col">Renew, request, suggest</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/borrow">Borrow &amp; request home</a></li>
+            <li><a href="https://libraries.mit.edu/borrow">Borrow & request home</a></li>
             <li><a href="https://libraries.mit.edu/accounts">Accounts overview <span class="about">Your Account, ILLiad, Aeon, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/search-collections">Search Our Collections <span class="about">Request items owned by MIT</span></a></li>
             <li><a href="https://libraries.mit.edu/worldcat">WorldCat <span class="about">Request items not owned by MIT</span></a></li>
@@ -110,21 +110,21 @@
       </h2>
       <div aria-labelledby="main-nav-researchmenu-title" id="main-nav-researchmenu" class="links-sub flex-container push group">
         <div class="col-1 flex-item">
-          <h3 class="heading-col">Help &amp; useful tools</h3>
+          <h3 class="heading-col">Help & useful tools</h3>
           <ul class="list-unbulleted">
             <li><a href="https://libraries.mit.edu/research-support">Research support home</a></li>
             <li><a href="https://libraries.mit.edu/ask">Ask us <span class="about">Email, chat, call, drop by</span></a></li>
-            <li><a href="https://libraries.mit.edu/experts">Research guides &amp; expert librarians <span class="about">For every research interest</span></a></li>
-            <li><a href="https://libraries.mit.edu/authenticate">Authenticate to online resources <span class="about">Tips &amp; tricks</span></a></li>
+            <li><a href="https://libraries.mit.edu/experts">Research guides & expert librarians <span class="about">For every research interest</span></a></li>
+            <li><a href="https://libraries.mit.edu/authenticate">Authenticate to online resources <span class="about">Tips & tricks</span></a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
-          <h3 class="heading-col">Publishing &amp; content management</h3>
+          <h3 class="heading-col">Publishing & content management</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/references">Citation &amp; writing tools <span class="about">Mendeley, Zotero, &amp; Overleaf</span></a></li>
+            <li><a href="https://libraries.mit.edu/references">Citation & writing tools <span class="about">Mendeley, Zotero, & Overleaf</span></a></li>
             <li><a href="https://libraries.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a></li>
             <li><a href="https://libraries.mit.edu/data-services">Data services <span class="about">GIS, data management, statistical support</span></a></li>
-            <li><a href="https://libraries.mit.edu/scholarly">Scholarly communications <span class="about">Open access, copyright, &amp; publishing</span></a></li>
+            <li><a href="https://libraries.mit.edu/scholarly">Scholarly communications <span class="about">Open access, copyright, & publishing</span></a></li>
             <li><a href="https://libraries.mit.edu/apis">APIs for scholarly resources</a></li>
           </ul>
         </div>
@@ -146,10 +146,10 @@
           </ul>
         </div>
         <div class="col-2 flex-item">
-          <h3 class="heading-col">News, events, &amp; exhibits</h3>
-          <a href="https://libraries.mit.edu/events">Classes &amp; events</a>
+          <h3 class="heading-col">News, events, & exhibits</h3>
+          <a href="https://libraries.mit.edu/events">Classes & events</a>
           <a href="https://libraries.mit.edu/news">News</a>
-          <a href="https://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a>
+          <a href="https://libraries.mit.edu/exhibits">Exhibits & galleries</a>
           <a href="https://libraries.mit.edu/news/in-the-media">In the media</a>
           <a href="https://libraries.mit.edu/mit-reads/">MIT Reads</a>
         </div>
