--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -71,6 +71,7 @@ jQuery(document).ready(function($) {
 <script>
   var _paq = window._paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
