Update Springshare apps with new MIT branding
Why these changes are being introduced:

The Institute has refreshed its branding.

Relevant ticket(s):

* https://mitlibraries.atlassian.net/browse/PW-71
* https://mitlibraries.atlassian.net/browse/PW-65

How this addresses that need:

This updates the `custom-header`, `custom-footer`, and
`custom-head.html` files for all Springshare properties, excluding
LibStaff and the beta A-Z Databases. (The latter is ticketed
separately and will come in a subsequent commit.)

The all three files should be identical for LibGuides, LibAnswers,
and LibCal. The other two properties have slight differences:

* LibAnswers DDC's header has no nav. The header consists of
the MITL logo and the new MIT logo.
* LibWizard has no footer. As such, the header nav is replaced
with links to the libraries' privacy and accessibility policies.

Otherwise, the only difference should be the app name in the
'Local overrides' comment.

Side effects of this change:

* The new favicons have been added to the LibGuides `custom-head`.
(These were added to the other `custom-head` files in the
last commit, which pulled in upstream changes from WordPress.)
* The nav html has been removed from LibAnswers DDC, as it does
not have a nav and shouldn't have a hamburger menu in mobile.
* Hover/focus highlights have been fixed to extend to the full
height of the header.
* Despite loading the favicons at the top of `custom-head`,
Springshare prioritizes the Springshare favicon. It's not clear
to me how to fix this.
* To remain consistent with our previous practices, all of the
changes were made in the 'Local overrides' sections of the
`custom-head` files. We should consider a longer term solution
of trimming the `custom-heads` to what is actually needed,
and incorporating the local overrides so that we aren't repeating
media queries and rules further down in the files.

--- a/libanswers/custom-head.html
+++ b/libanswers/custom-head.html
@@ -1174,37 +1174,101 @@ body.user-is-tabbing *.nav-main .main-nav-link.no-underline:focus {
   }
 }
 
-/* Local overrides */
+/* Local overrides for libanswers */
 
-/* layout adjustments especially for libanswers */
-@media only screen and (min-width: 1024px) {
-  .header-main .name-site {
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 568px) {
-  .header-main .name-site {
-    margin-bottom: 0;
-  }
-}
-
-.header-main, 
-.layout-band {
+/* Reset only what you need */
+.header-main,
+footer {
   max-width: 1170px; /* matches .container */
   width: 100%;
   margin: 0 auto;
+}
+
+.header-main {
+  padding: 0 20px;
+}
+
+.header-main .name-site {
+  margin: 0;
+  padding: 0;
 }
 
 @media only screen and (max-width:568px) {
   .header-main>[class*=link] {
     font-size: 9px
   }
+  .header-main {
+    padding: 0;
+  }
+  .header-main .menu--toggle {
+    margin: auto 0;
+  }
+  .header-main .logo-mit-lib {
+    padding-left: 0;
+  }
 }
 
-/* reset only what you need */
+/* The rules in this media query primarily set alignment for the logos and nav */
+@media only screen and (min-width: 569px) {
+  .header-main {
+    height: 75px; /* matches height of logos, including 20px top/bottom padding */
+  }
+  .header-main .name-site {
+    max-width: 100%;
+  }
+  .nav-main,
+  .nav-main .nav-main-list,
+  .nav-main .nav-main-list li,
+  .nav-main .small a,
+  .nav-main .main-nav-link {
+    height: 100%;
+  }
+  .header-main .logo-mit-lib {
+    padding: 20px 0;
+    vertical-align: baseline;
+  }
+  .nav-main {
+    margin: 0 10px;
+  }
+  .header-main .link-site-search,
+  .header-main .link-account {
+    padding: 20px 0;
+  }
+  .nav-main .small a {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .nav-main .main-nav-link {
+    margin: 0;
+    padding: 20px 8px;
+  }
+  .header-main .link-logo-mit {
+    display: none
+  }
+}
+
+/* 635px is the maximum width before the logos will shrink if both are displayed */
+@media only screen and (min-width: 635px) {
+  .header-main .link-logo-mit {
+    display: block;
+    padding: 20px 0;
+    vertical-align: baseline;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+  .nav-main .small a {
+    flex-direction: row; /* flex-direction and alignment needs to change when the SVGs are hidden */
+    align-items: flex-end;
+    height: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
 .header-main h2 {
-  line-height: normal;
   margin: 0;
   padding: 0;
   border: 0;
@@ -1223,6 +1287,17 @@ body.user-is-tabbing *.nav-main .main-nav-link.no-underline:focus {
   vertical-align: baseline;
   background: 0 0;
   list-style-type: none;
+}
+
+footer a,
+header a {
+  color: #000;
+  text-decoration: none;
+}
+footer a:hover,
+footer a:focus {
+  color: #fff;
+  text-decoration: underline;
 }
 
 .tabs a {
