--- a/libanswers-ddc/custom-head.html
+++ b/libanswers-ddc/custom-head.html
@@ -1174,35 +1174,53 @@ body.user-is-tabbing *.nav-main .main-nav-link.no-underline:focus {
   }
 }
 
-/* Local overrides */
+/* Local overrides for DDC libanswers */
 
-/* layout adjustments especially for libanswers */
-@media only screen and (min-width: 1024px) {
-  .header-main .name-site {
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 568px) {
-  .header-main .name-site {
-    margin-bottom: 0;
-  }
-}
-
-.header-main, 
-.layout-band {
+/* Reset only what you need */
+.header-main,
+footer {
   max-width: 1170px; /* matches .container */
   width: 100%;
   margin: 0 auto;
+}
+
+.header-main {
+  padding: 0 20px;
+}
+
+.header-main .name-site {
+  margin: 0;
+  padding: 0;
 }
 
 @media only screen and (max-width:568px) {
   .header-main>[class*=link] {
     font-size: 9px
   }
+  .header-main .logo-mit-lib {
+    padding: 8px 0;
+  }
 }
 
-/* reset only what you need */
+/* The rules in this media query set alignment for the logos */
+@media only screen and (min-width: 569px) {
+  .header-main {
+    height: 75px; /* matches height of logos, including 20px top/bottom padding */
+  }
+  .header-main .name-site {
+    max-width: 100%;
+  }
+  .header-main .logo-mit-lib {
+    padding: 20px 0;
+    vertical-align: baseline;
+  }
+  .header-main .link-logo-mit {
+    display: block;
+    padding: 20px 0;
+    vertical-align: baseline;
+  }
+}
+
 .header-main h2 {
   line-height: normal;
   margin: 0;
@@ -1223,6 +1241,17 @@ body.user-is-tabbing *.nav-main .main-nav-link.no-underline:focus {
   vertical-align: baseline;
   background: 0 0;
   list-style-type: none;
+}
+
+footer a,
+header a {
+  color: #000;
+  text-decoration: none;
+}
+footer a:hover,
+footer a:focus {
+  color: #fff;
+  text-decoration: underline;
 }
 
 .tabs a {
