Reintegrate old A-Z Database CSS
Why these changes are being introduced:

This was inadvertently removed at some point during the branding
updates.

Relevant ticket(s):

N/A (identified in UXWS-1621, but unrelated)

How this addresses that need:

This adds the missing CSS.

Side effects of this change:

None.

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1425,3 +1425,28 @@ height:auto;
   margin-right: 0.5em;
 }
 </style>
+
+<!-- Styling for A-Z databases -->
+<style>
+/* Hide the Database Types dropdown */
+#col-types {
+    display: none;
+}
+/* Hide the Vendors dropdown */
+#col-vendors {
+    display: none;
+}
+/*change a to z database titles to be larger */
+#s-lg-az-results .s-lg-az-result-title {
+font-size: 1.1em;
+}
+/*change a to z databases alternative title sizing */
+div.s-lg-az-result-keywords {
+font-size: .9em;
+}
+/* Change letter heading sizes*/
+h3.s-lg-db-panel-title {
+    margin: 0;
+    font-size: 1.3em;
+}
+</style>
