updated nav style to force white hover text

--- a/libwizard/custom-head.html
+++ b/libwizard/custom-head.html
@@ -162,6 +162,7 @@ h3 {
 .header-main .link-contact:hover,
 .header-main .link-contact:focus {
   background-color: #c702c7;
+  color: #fff;
 }
 .header-main .link-account svg,
 .header-main .link-site-search svg,
@@ -472,7 +473,7 @@ body.user-is-tabbing *.nav-main .main-nav-link.no-underline:focus {
 }
 .nav-main .main-nav-link.no-underline:hover {
   text-decoration: none;
-  color: #fff;
+  color: #fff !important;
   background-color: #c702c7;
 }
 @media only screen and (min-width: 569px) {
