nav text color fix for mobile breakpoint

--- a/libwizard/custom-head.html
+++ b/libwizard/custom-head.html
@@ -858,6 +858,7 @@ body.user-is-tabbing *.nav-main .main-nav-link.no-underline:focus {
   .header-main .link-accessibility:focus {
     background-color: #c702c7;
     text-decoration: none;
+    color: #fff !important;
   }
   .header-main .link-privacy {
     margin-left: auto;
