Added rule to show title and search box only on homepage

--- a/libanswers/custom-head.html
+++ b/libanswers/custom-head.html
@@ -1351,6 +1351,11 @@ body.s-la-page-faq #s-la-bc > div > ol > li:nth-child(2),
 body.s-la-page-single.search #s-la-bc > div > ol > li:nth-child(2)
 {display:none;}
 
+
 body.s-la-page-home #s-la-page-title-bar {display: none;}
+
+/* keep the header and search bar ONLY on the homepage */
+#s-la-page-1401 #s-la-page-title-bar {display: block;}
+#s-la-page-1401 #s-la-public-header {display: block;}
 
 </style>
